--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx ./scripts/http-server.ts --base-path ./ --url-path-name /tests/index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.17.1"
+  "packageManager": "pnpm@10.17.1",
+  "devDependencies": {
+    "@types/node": "^24.7.1",
+    "@wuchuheng/helper": "^1.3.0",
+    "commander": "^14.0.1",
+    "tsx": "^4.20.6"
+  }
 }
