--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.1",
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@types/node": "^24.7.1",
     "@wuchuheng/helper": "^1.3.0",
     "commander": "^14.0.1",
-    "tsx": "^4.20.6"
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
+    "tsx": "^4.20.6",
+    "typescript-eslint": "^8.46.0"
   }
 }
