chore(vscode): update settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,34 +29,176 @@
     "editor.defaultFormatter": "vscode.html-language-features"
   },
   "cSpell.words": [
+    "amode",
+    "Apibootstrap",
+    "argp",
+    "arities",
+    "astack",
+    "asyncer",
     "ATINIT",
     "ATPOSTRUN",
     "ATPRERUN",
+    "auxdata",
     "Blkdev",
+    "blobwrite",
+    "CANTOPEN",
     "Capi",
     "cflag",
+    "changegroup",
     "chrdev",
+    "CKPT",
+    "cmap",
+    "COEP",
+    "compileoption",
+    "cstrlen",
+    "cstrncpy",
+    "ctype",
+    "datalength",
+    "DBCONFIG",
+    "DELETEONCLOSE",
+    "descr",
+    "dflt",
+    "DIRECTONLY",
+    "dirfd",
+    "dirstream",
     "dont",
+    "emcc",
     "Emscripten",
+    "errcode",
+    "errmsg",
+    "errstr",
+    "EXRESCODE",
+    "faccessat",
+    "fargs",
+    "fcntl",
+    "fdstat",
+    "FKEY",
+    "flexi",
+    "fmap",
+    "fptr",
+    "frombind",
+    "fwrap",
     "getattr",
+    "getcwd",
+    "getdents",
+    "GETMALLOC",
+    "GETMUTEX",
+    "GETPCACHE",
+    "HDRSZ",
     "HEAPF",
+    "HEAPSIZE",
     "HEAPU",
     "iflag",
+    "iippj",
+    "inited",
+    "IOCAP",
+    "IOERR",
+    "iovcnt",
+    "ippp",
+    "isdir",
+    "isexplain",
+    "islast",
+    "Jaccwabyt",
+    "jstr",
+    "jstrcpy",
+    "jstrlen",
     "kvinfo",
+    "kvstorage",
     "kvvfs",
     "lflag",
+    "libversion",
     "llseek",
+    "localtime",
+    "LOGNAME",
+    "LOOKASIDE",
+    "MAINDBNAME",
+    "makedev",
+    "MAXSIZE",
     "memalign",
+    "MEMSTATUS",
+    "mkdev",
+    "mkdirat",
+    "mkey",
     "mknod",
     "mmap",
+    "mnames",
+    "mountpoint",
+    "msize",
     "msync",
+    "munmap",
+    "newfstatat",
+    "nextfd",
+    "nochange",
+    "oargs",
     "oflag",
+    "oflags",
+    "ondispose",
+    "openat",
     "opfs",
+    "parentid",
+    "patchset",
+    "PCACHE",
     "pdir",
+    "penviron",
+    "pipip",
+    "pipp",
+    "PMASZ",
+    "pnum",
+    "POLLMASK",
+    "ppippjj",
+    "Prerun",
+    "preupdate",
+    "Psjfdc",
+    "Psjrdc",
+    "pstack",
+    "qfmt",
+    "QPSG",
+    "readlinkat",
+    "Reinit",
+    "remethods",
+    "rmfr",
+    "SABC",
+    "sahpool",
+    "SAVEPOINT",
+    "SCANORDER",
+    "SCANSTATUS",
     "setattr",
+    "SINGLETHREAD",
+    "SORTERREF",
+    "sourceid",
+    "SQLLOG",
+    "STMTJRNL",
+    "strglob",
+    "stricmp",
+    "strlike",
+    "strm",
+    "strnicmp",
+    "syncer",
+    "syncfs",
+    "SYSCALLS",
     "tcgets",
     "tcsets",
+    "termios",
     "tiocgwinsz",
-    "wasmfs"
+    "toobig",
+    "tzset",
+    "uleb",
+    "unget",
+    "unlinkat",
+    "urandom",
+    "utime",
+    "utimensat",
+    "Vararg",
+    "varargs",
+    "voidptr",
+    "vtab",
+    "wasmfs",
+    "webworkers",
+    "wfetch",
+    "winsize",
+    "wudf",
+    "Xfer",
+    "yday",
+    "zeroblob"
   ],
 }
