--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "test": "pnpm -w --filter @wuchuheng/web-sqlite-tests dev",
-    "lint": "eslint . --ext .ts,.js,.mjs --fix"
+    "lint": "eslint . --ext .ts,.js,.mjs --fix; pnpm run typecheck",
+    "typecheck": "cd tests && pnpm exec tsc --noEmit --pretty"
   },
   "keywords": [
     "sqlite",
