--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -195,9 +195,11 @@
     "wasmfs",
     "webworkers",
     "wfetch",
+    "whwasm",
     "winsize",
     "wudf",
     "Xfer",
+    "xwrap",
     "yday",
     "zeroblob"
   ],
