refactory: refactor install-opfs-vfs.mjs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
     "auxdata",
     "Blkdev",
     "blobwrite",
+    "bootstrapper",
     "CANTOPEN",
     "Capi",
     "cflag",
@@ -170,6 +171,7 @@
     "STMTJRNL",
     "strglob",
     "stricmp",
+    "Stringifier",
     "strlike",
     "strm",
     "strnicmp",
