--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-    "name": "@wuchuheng/web-sqlite",
-    "version": "1.0.0",
-    "description": "SQLite3 WebAssembly implementation with OPFS support",
-    "type": "module",
-    "main": "./src/jswasm/sqlite3.mjs",
-    "types": "./src/jswasm/sqlite3.d.ts",
-    "exports": {
-        ".": {
-            "types": "./src/jswasm/sqlite3.d.ts",
-            "default": "./src/jswasm/sqlite3.mjs"
-        }
-    },
-    "scripts": {
-        "test": "pnpm -w --filter @wuchuheng/web-sqlite-tests dev",
-        "lint": "eslint . --ext .ts,.js,.mjs --ignore-path .gitignore --fix; pnpm run test:lint",
-        "test:lint": "cd tests && pnpm run lint",
-        "docs:dev": "vitepress dev docs",
-        "format": "prettier --ignore-path .gitignore --write ."
-    },
-    "keywords": [
-        "sqlite",
-        "wasm",
-        "opfs",
-        "webassembly",
-        "database"
-    ],
-    "author": "",
-    "license": "ISC",
-    "packageManager": "pnpm@10.17.1",
-    "devDependencies": {
-        "@eslint/js": "^9.37.0",
-        "@types/node": "^24.7.1",
-        "@wuchuheng/helper": "^1.3.0",
-        "commander": "^14.0.1",
-        "eslint": "^9.37.0",
-        "globals": "^16.4.0",
-        "jiti": "^2.6.1",
-        "prettier": "3.6.2",
-        "tsx": "^4.20.6",
-        "typescript": "^5.6.3",
-        "typescript-eslint": "^8.46.0",
-        "vitepress": "^1.5.0"
+  "name": "@wuchuheng/web-sqlite",
+  "version": "1.0.0",
+  "description": "SQLite3 WebAssembly implementation with OPFS support",
+  "type": "module",
+  "main": "./src/jswasm/sqlite3.mjs",
+  "types": "./src/jswasm/sqlite3.d.ts",
+  "exports": {
+    ".": {
+      "types": "./src/jswasm/sqlite3.d.ts",
+      "default": "./src/jswasm/sqlite3.mjs"
     }
+  },
+  "scripts": {
+    "build": "vite build",
+    "test": "pnpm -w --filter @wuchuheng/web-sqlite-tests dev",
+    "lint": "eslint . --ext .ts,.js,.mjs --ignore-path .gitignore --fix; pnpm run test:lint",
+    "test:lint": "cd tests && pnpm run lint",
+    "docs:dev": "vitepress dev docs",
+    "format": "prettier --ignore-path .gitignore --write .",
+    "dev": "vite",
+    "preview": "vite preview"
+  },
+  "keywords": [
+    "sqlite",
+    "wasm",
+    "opfs",
+    "webassembly",
+    "database"
+  ],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.17.1",
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@types/node": "^24.7.1",
+    "@wuchuheng/helper": "^1.3.0",
+    "commander": "^14.0.1",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.1",
+    "prettier": "3.6.2",
+    "tsx": "^4.20.6",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.0",
+    "vite": "^7.1.10",
+    "vite-plugin-dts": "^4.5.4",
+    "vitepress": "^1.5.0"
+  }
 }
