docs(development): add TS migration + JSDoc standards; relocate worker docs
  - add docs/development/jswasm-typescript-migration.md (bottom‑up TS migration plan, numeric comments requirement, JSDoc requirement, manual .d.ts replacement policy, per‑module
    checklist)
  - add docs/development/jsdoc-standards.md (JSDoc rules, templates, utf8 examples)
  - move src/sqlite-work-api-spec.md → docs/development/sqlite-work-api-spec.md
  - move src/sqlite-worker-impl-plan.md → docs/development/sqlite-worker-impl-plan.md
  - chore(vscode): update workspace settings in .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,7 @@
         "jstr",
         "jstrcpy",
         "jstrlen",
+        "jswasm",
         "kvinfo",
         "kvstorage",
         "kvvfs",
