docs(memory-bank): init memroy bank

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,9 +51,12 @@
         "cmap",
         "COEP",
         "compileoption",
+        "configurator",
+        "CREAT",
         "cstrlen",
         "cstrncpy",
         "ctype",
+        "cwrap",
         "datalength",
         "DBCONFIG",
         "DELETEONCLOSE",
@@ -63,10 +66,12 @@
         "dirfd",
         "dirstream",
         "dont",
+        "Embedder",
         "emcc",
         "Emscripten",
         "errcode",
         "errmsg",
+        "errno",
         "errstr",
         "EXRESCODE",
         "faccessat",
@@ -115,6 +120,7 @@
         "LOOKASIDE",
         "MAINDBNAME",
         "makedev",
+        "malloc",
         "MAXSIZE",
         "memalign",
         "MEMSTATUS",
@@ -131,12 +137,14 @@
         "newfstatat",
         "nextfd",
         "nochange",
+        "nosniff",
         "oargs",
         "oflag",
         "oflags",
         "ondispose",
         "openat",
         "opfs",
+        "OPFSVFS",
         "parentid",
         "patchset",
         "PCACHE",
@@ -176,6 +184,7 @@
         "strlike",
         "strm",
         "strnicmp",
+        "subarray",
         "syncer",
         "syncfs",
         "SYSCALLS",
@@ -184,6 +193,7 @@
         "termios",
         "tiocgwinsz",
         "toobig",
+        "tsparser",
         "tzset",
         "uleb",
         "unget",
@@ -195,6 +205,7 @@
         "varargs",
         "voidptr",
         "vtab",
+        "WASI",
         "wasmfs",
         "webworkers",
         "wfetch",
