--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -12,7 +12,8 @@
         "composite": false
     },
     "include": [
-        "src/jswasm/utils/utf8/*.ts"
+        "src/jswasm/utils/utf8/*.ts",
+        "src/jswasm/utils/path/*.ts"
     ],
     "exclude": [
         "src/**/*.test.ts",
