refactor(async-utils): Migrate async utilities from JavaScript to TypeScript
- Replace async-utils.mjs and async-utils.d.ts with TypeScript implementation
- Move async utilities to dedicated async-utils/ directory structure
- Add comprehensive test suite for async utilities functionality
- Update documentation with detailed test plan and migration guide
- Update import path in sqlite3.mjs to use new TypeScript module
- Update TypeScript migration configuration to include new async-utils module

This change maintains full backward compatibility while improving type safety and developer experience through TypeScript migration.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -12,6 +12,7 @@
         "composite": false
     },
     "include": [
+        "src/jswasm/utils/async-utils/*.ts",
         "src/jswasm/utils/utf8/*.ts",
         "src/jswasm/utils/path/*.ts"
     ],
