refactor(utils): Migrate memory-utils from JavaScript to TypeScript
- Replace memory-utils.mjs and memory-utils.d.ts with TypeScript implementation
- Move module to memory-utils/ subdirectory for better organization
- Add comprehensive Vitest test suite with full coverage
- Update import paths in memory-manager.mjs and sqlite3.mjs
- Add development documentation for test planning
- Update tsconfig.migration.json to include new TypeScript files

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -14,6 +14,7 @@
     "include": [
         "src/jswasm/utils/async-utils/*.ts",
         "src/jswasm/utils/utf8/*.ts",
+        "src/jswasm/utils/memory-utils/*.ts",
         "src/jswasm/utils/path/*.ts"
     ],
     "exclude": [
