--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -15,7 +15,8 @@
         "src/jswasm/utils/async-utils/*.ts",
         "src/jswasm/utils/utf8/*.ts",
         "src/jswasm/utils/memory-utils/*.ts",
-        "src/jswasm/utils/path/*.ts"
+        "src/jswasm/utils/path/*.ts",
+        "src/jswasm/utils/sqlite3-init-wrapper/*.ts"
     ],
     "exclude": [
         "src/**/*.test.ts",
