--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
         "typecheck:migration:watch": "tsc --watch -p tsconfig.migration.json",
         "build:migration": "tsc -p tsconfig.migration.json",
         "build:migration:watch": "tsc --watch -p tsconfig.migration.json",
-        "lint": "eslint . --ext .ts,.js,.mjs --ignore-path .gitignore --fix; pnpm run test:lint",
+        "lint": "eslint . --ext .ts,.js,.mjs --fix; pnpm run typecheck; pnpm run test:lint",
         "test:lint": "cd tests && pnpm run lint",
+        "typecheck": "tsc --noEmit --pretty",
         "docs:dev": "vitepress dev docs",
         "format": "prettier --ignore-path .gitignore --write .",
         "dev": "vite",
@@ -51,6 +52,7 @@
         "typescript-eslint": "^8.46.0",
         "vite": "^7.1.10",
         "vite-plugin-dts": "^4.5.4",
-        "vitepress": "^1.5.0"
+        "vitepress": "^1.5.0",
+        "vitest": "^4.0.9"
     }
 }
