refactor(utils): Migrate create-wh-wasm-util-installer to TypeScript
- Replace legacy .mjs/.d.ts files with proper TypeScript implementation
- Add comprehensive test suite with Vitest for the installer module
- Create dedicated module structure under create-wh-wasm-util-installer/
- Update tsconfig.migration.json to include new TypeScript module
- Add detailed test plan documentation for the migration process
- Update install-oo1.mjs to work with new module structure

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -16,7 +16,8 @@
         "src/jswasm/utils/utf8/*.ts",
         "src/jswasm/utils/memory-utils/*.ts",
         "src/jswasm/utils/path/*.ts",
+        "src/jswasm/utils/create-wh-wasm-util-installer/*.ts",
         "src/jswasm/utils/sqlite3-init-wrapper/*.ts"
     ],
-    "exclude": ["src/**/*.test.ts", "src/**/*.d.ts"]
+    "exclude": ["src/**/*.test.ts"]
 }
