feat(wasm): migrate WASM loader to TypeScript with comprehensive test coverage
- Replace JavaScript wasm-loader.mjs with TypeScript implementation
- Add complete type definitions for WasmLoaderConfig and related interfaces
- Implement comprehensive test suite covering all loader scenarios
- Update main sqlite3.mjs to use new TypeScript loader
- Add detailed test plan documentation for the migration
- Update runtime documentation to reflect TypeScript migration

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -17,7 +17,8 @@
         "src/jswasm/utils/memory-utils/*.ts",
         "src/jswasm/utils/path/*.ts",
         "src/jswasm/utils/create-wh-wasm-util-installer/*.ts",
-        "src/jswasm/utils/sqlite3-init-wrapper/*.ts"
+        "src/jswasm/utils/sqlite3-init-wrapper/*.ts",
+        "src/jswasm/utils/wasm-loader/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
