refactor(struct-binder): Migrate struct-binder-helpers from JavaScript to TypeScript
- Replace struct-binder-helpers.mjs with TypeScript implementation in dedicated subdirectory
- Add comprehensive Vitest test suite covering all exported functions (toss, defineReadonly, describeMember, isNumericValue, detectLittleEndian)
- Create detailed test plan documentation for migration validation
- Update TypeScript migration configuration to include new struct-binder-helpers module
- Modify dependent struct-binder modules to work with new TypeScript structure
- Add proper TypeScript types and improve code organization

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -18,7 +18,8 @@
         "src/jswasm/utils/path/*.ts",
         "src/jswasm/utils/create-wh-wasm-util-installer/*.ts",
         "src/jswasm/utils/sqlite3-init-wrapper/*.ts",
-        "src/jswasm/utils/wasm-loader/*.ts"
+        "src/jswasm/utils/wasm-loader/*.ts",
+        "src/jswasm/utils/struct-binder/struct-binder-helpers/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
