refactor(struct-binder): Migrate struct-binder-memory from JavaScript to TypeScript
- Convert struct-binder-memory.mjs to TypeScript implementation with full type definitions
- Add comprehensive test suite covering allocation lifecycle, disposal flow, CString helpers, and member lookup
- Delete legacy .mjs file and replace with new directory structure for better organization
- Update related struct-binder modules (context, internals, members) to work with new implementation
- Create detailed test plan documentation for the migration process
- Update TypeScript migration configuration to support the new module structure
- Maintain backward compatibility while adding type safety and improved error handling

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -7,7 +7,7 @@
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": false,
         "sourceMap": false,
-        "declaration": false,
+        "declaration": true,
         "declarationMap": false,
         "composite": false
     },
@@ -19,7 +19,8 @@
         "src/jswasm/utils/create-wh-wasm-util-installer/*.ts",
         "src/jswasm/utils/sqlite3-init-wrapper/*.ts",
         "src/jswasm/utils/wasm-loader/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-helpers/*.ts"
+        "src/jswasm/utils/struct-binder/struct-binder-helpers/*.ts",
+        "src/jswasm/utils/struct-binder/struct-binder-memory/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
