refactor(struct-binder): Migrate struct-binder-signatures from JS to TypeScript
- Replace struct-binder-signatures.mjs with TypeScript implementation
- Add comprehensive Vitest test suite for signature helpers
- Update tsconfig.migration.json to include new TS files
- Add detailed test plan documentation for migration verification
- Update struct-binder-context.mjs and struct-binder-internals.mjs imports
- Maintain full API compatibility with existing JavaScript implementation

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -20,6 +20,7 @@
         "src/jswasm/utils/sqlite3-init-wrapper/*.ts",
         "src/jswasm/utils/wasm-loader/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-helpers/*.ts",
+        "src/jswasm/utils/struct-binder/struct-binder-signatures/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-memory/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
