refactor(struct-binder): Migrate struct-binder-members from JavaScript to TypeScript
- Convert struct-binder-members.mjs to TypeScript implementation with proper type definitions
- Restructure from single file to directory-based module with separate test file
- Add comprehensive test plan documentation for struct-binder-members module
- Update tsconfig.migration.json to include new struct-binder-members TypeScript files
- Maintain existing API compatibility while adding type safety

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -22,6 +22,7 @@
         "src/jswasm/utils/struct-binder/struct-binder-helpers/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-accessors/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-signatures/*.ts",
+        "src/jswasm/utils/struct-binder/struct-binder-members/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-memory/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
