refactor(struct-binder): Migrate struct-binder-struct-type from JS to TypeScript
- Convert struct-binder-struct-type.mjs to TypeScript with full type annotations
- Add comprehensive test suite covering constructor token guard, context delegation, and memory operations
- Update struct-binder-internals.mjs to export from new TypeScript module location
- Add struct-binder-struct-type to tsconfig.migration.json for build pipeline
- Create detailed test plan document for validation
- Update minimal JS-to-TS migration specification with latest workflow
- Remove original struct-binder-struct-type.mjs file after successful migration

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -23,7 +23,8 @@
         "src/jswasm/utils/struct-binder/struct-binder-accessors/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-signatures/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-members/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-memory/*.ts"
+        "src/jswasm/utils/struct-binder/struct-binder-memory/*.ts",
+        "src/jswasm/utils/struct-binder/struct-binder-struct-type/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
