--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -21,6 +21,7 @@
         "src/jswasm/utils/wasm-loader/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-helpers/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-accessors/*.ts",
+        "src/jswasm/utils/struct-binder/struct-binder-factory/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-signatures/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-members/*.ts",
         "src/jswasm/utils/struct-binder/struct-binder-memory/*.ts",
