refactor(struct-binder): Migrate struct-binder-context to TypeScript with comprehensive testing
- Migrate struct-binder-context.mjs to TypeScript implementation
- Add comprehensive test suite for struct-binder-context with Vitest
- Create detailed test plan documentation for struct-binder-context
- Update struct-binder-factory to work with new TypeScript context
- Rename struct-binder-internals.mjs to .ts for consistency
- Update tsconfig.migration.json to include new struct-binder TypeScript files

This migration improves type safety, developer experience, and test coverage for the struct binding system core components.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -19,13 +19,7 @@
         "src/jswasm/utils/create-wh-wasm-util-installer/*.ts",
         "src/jswasm/utils/sqlite3-init-wrapper/*.ts",
         "src/jswasm/utils/wasm-loader/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-helpers/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-accessors/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-factory/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-signatures/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-members/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-memory/*.ts",
-        "src/jswasm/utils/struct-binder/struct-binder-struct-type/*.ts"
+        "src/jswasm/utils/struct-binder/**/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
