refactor(jswasm:installer-context): Convert from .mjs to TypeScript with test coverage
- Replace installer-context.mjs/.d.ts with TypeScript implementation in dedicated directory
- Add WhWasmInstallerContext class with comprehensive type safety
- Implement test suite covering memory resolution, heap views, and pointer metadata
- Update dependent modules to use new import paths
- Add migration test plan documentation
- Update tsconfig.migration.json for new module structure

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -19,7 +19,8 @@
         "src/jswasm/utils/create-wh-wasm-util-installer/*.ts",
         "src/jswasm/utils/sqlite3-init-wrapper/*.ts",
         "src/jswasm/utils/wasm-loader/*.ts",
-        "src/jswasm/utils/struct-binder/**/*.ts"
+        "src/jswasm/utils/struct-binder/**/*.ts",
+        "src/jswasm/utils/whwasm/installer-context/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
