refactor(whwasm): Migrate function-table-helpers from JavaScript to TypeScript
- Replace function-table-helpers.d.ts and function-table-helpers.mjs with structured TypeScript module
- Add comprehensive test suite for function-table-helpers functionality
- Update create-wh-wasm-util-installer to support the new TypeScript structure
- Configure TypeScript migration build to include the new module
- Add test plan documentation for migration validation

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -20,7 +20,8 @@
         "src/jswasm/utils/sqlite3-init-wrapper/*.ts",
         "src/jswasm/utils/wasm-loader/*.ts",
         "src/jswasm/utils/struct-binder/**/*.ts",
-        "src/jswasm/utils/whwasm/installer-context/*.ts"
+        "src/jswasm/utils/whwasm/installer-context/*.ts",
+        "src/jswasm/utils/whwasm/function-table-helpers/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
