--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -22,7 +22,8 @@
         "src/jswasm/utils/struct-binder/**/*.ts",
         "src/jswasm/utils/whwasm/installer-context/*.ts",
         "src/jswasm/utils/whwasm/function-table-helpers/*.ts",
-        "src/jswasm/utils/whwasm/heap-helpers/*.ts"
+        "src/jswasm/utils/whwasm/heap-helpers/*.ts",
+        "src/jswasm/utils/whwasm/memory-helpers/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
