--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -23,7 +23,9 @@
         "src/jswasm/utils/whwasm/installer-context/*.ts",
         "src/jswasm/utils/whwasm/function-table-helpers/*.ts",
         "src/jswasm/utils/whwasm/heap-helpers/*.ts",
-        "src/jswasm/utils/whwasm/memory-helpers/*.ts"
+        "src/jswasm/utils/whwasm/memory-helpers/*.ts",
+        "src/jswasm/utils/whwasm/scoped-alloc-helpers/*.ts",
+        "src/jswasm/utils/whwasm/utils/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
