refactor(string-helpers): Migrate string utilities from JavaScript to TypeScript
- Convert string-helpers.mjs and .d.ts to TypeScript implementation
- Add comprehensive test suite with Vitest for all string helper functions
- Update installer to import new TypeScript string utilities
- Create detailed test plan documentation for migration validation
- Update tsconfig.migration.json to include new string-helpers module
- Maintain full API compatibility while improving type safety and development experience

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -25,7 +25,8 @@
         "src/jswasm/utils/whwasm/heap-helpers/*.ts",
         "src/jswasm/utils/whwasm/memory-helpers/*.ts",
         "src/jswasm/utils/whwasm/scoped-alloc-helpers/*.ts",
-        "src/jswasm/utils/whwasm/utils/*.ts"
+        "src/jswasm/utils/whwasm/utils/*.ts",
+        "src/jswasm/utils/whwasm/string-helpers/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
