--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -26,7 +26,8 @@
         "src/jswasm/utils/whwasm/memory-helpers/*.ts",
         "src/jswasm/utils/whwasm/scoped-alloc-helpers/*.ts",
         "src/jswasm/utils/whwasm/utils/*.ts",
-        "src/jswasm/utils/whwasm/string-helpers/*.ts"
+        "src/jswasm/utils/whwasm/string-helpers/*.ts",
+        "src/jswasm/utils/whwasm/xwrap-internals/**/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
