--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -27,7 +27,8 @@
         "src/jswasm/utils/whwasm/scoped-alloc-helpers/*.ts",
         "src/jswasm/utils/whwasm/utils/*.ts",
         "src/jswasm/utils/whwasm/string-helpers/*.ts",
-        "src/jswasm/utils/whwasm/xwrap-internals/**/*.ts"
+        "src/jswasm/utils/whwasm/xwrap-internals/**/*.ts",
+        "src/jswasm/utils/whwasm/xwrap-helpers/**/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
