refactor(vfs): Migrate base-state module from JavaScript to TypeScript
- Convert base-state.mjs to TypeScript with proper type definitions
- Move module to dedicated base-state/ subdirectory for better organization
- Add comprehensive test suite with Vitest covering all functionality
- Update tsconfig.migration.json to include new TypeScript module
- Add detailed test plan documentation for migration verification
- Maintain full behavioral parity with original JavaScript implementation

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -29,7 +29,8 @@
         "src/jswasm/utils/whwasm/string-helpers/*.ts",
         "src/jswasm/utils/whwasm/yawl-loader/*.ts",
         "src/jswasm/utils/whwasm/xwrap-internals/**/*.ts",
-        "src/jswasm/utils/whwasm/xwrap-helpers/**/*.ts"
+        "src/jswasm/utils/whwasm/xwrap-helpers/**/*.ts",
+        "src/jswasm/vfs/filesystem/base-state/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
