--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -30,7 +30,8 @@
         "src/jswasm/utils/whwasm/yawl-loader/*.ts",
         "src/jswasm/utils/whwasm/xwrap-internals/**/*.ts",
         "src/jswasm/utils/whwasm/xwrap-helpers/**/*.ts",
-        "src/jswasm/vfs/filesystem/base-state/*.ts"
+        "src/jswasm/vfs/filesystem/base-state/*.ts",
+        "src/jswasm/vfs/filesystem/initialization/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
