--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -31,7 +31,8 @@
         "src/jswasm/utils/whwasm/xwrap-internals/**/*.ts",
         "src/jswasm/utils/whwasm/xwrap-helpers/**/*.ts",
         "src/jswasm/vfs/filesystem/base-state/*.ts",
-        "src/jswasm/vfs/filesystem/initialization/*.ts"
+        "src/jswasm/vfs/filesystem/initialization/*.ts",
+        "src/jswasm/vfs/filesystem/legacy-helpers/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
