migrate(vfs): Convert mode-operations from JavaScript to TypeScript
- Complete migration of mode-operations.mjs to TypeScript
- Enhance type safety while maintaining behavioral compatibility
- Add extensive test coverage (31 tests) for all operations
- Update runtime imports and build configuration
- Document migration process and handover information

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -32,7 +32,8 @@
         "src/jswasm/utils/whwasm/xwrap-helpers/**/*.ts",
         "src/jswasm/vfs/filesystem/base-state/*.ts",
         "src/jswasm/vfs/filesystem/initialization/*.ts",
-        "src/jswasm/vfs/filesystem/legacy-helpers/*.ts"
+        "src/jswasm/vfs/filesystem/legacy-helpers/*.ts",
+        "src/jswasm/vfs/filesystem/mode-operations/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
