refactor(vfs): Migrate mount operations from JavaScript to TypeScript
- Replace mount-operations.mjs with TypeScript implementation in mount-operations/
- Add comprehensive test suite for mount operations functionality
- Update filesystem.mjs import path to new TypeScript module
- Enhance base-state.ts type definitions for better TypeScript support
- Update mode-operations test for improved test coverage
- Configure tsconfig.migration.json for TypeScript migration workflow

This change improves type safety, developer experience, and maintainability
of the virtual filesystem mount operations while preserving all existing
functionality.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -33,7 +33,8 @@
         "src/jswasm/vfs/filesystem/base-state/*.ts",
         "src/jswasm/vfs/filesystem/initialization/*.ts",
         "src/jswasm/vfs/filesystem/legacy-helpers/*.ts",
-        "src/jswasm/vfs/filesystem/mode-operations/*.ts"
+        "src/jswasm/vfs/filesystem/mode-operations/*.ts",
+        "src/jswasm/vfs/filesystem/mount-operations/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
