refactor(vfs): Migrate node-core-operations from JavaScript to TypeScript
- Convert node-core-operations.mjs to TypeScript with improved type safety
- Reorganize module into dedicated directory structure with separate test files
- Add comprehensive test plan documentation for the migrated module
- Update node-actions.mjs to import from new TypeScript location
- Configure tsconfig.migration.json to support the TypeScript migration
- Enhance test coverage with new TypeScript-based test implementation
- Maintain backward compatibility while improving code organization

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -34,7 +34,8 @@
         "src/jswasm/vfs/filesystem/initialization/*.ts",
         "src/jswasm/vfs/filesystem/legacy-helpers/*.ts",
         "src/jswasm/vfs/filesystem/mode-operations/*.ts",
-        "src/jswasm/vfs/filesystem/mount-operations/*.ts"
+        "src/jswasm/vfs/filesystem/mount-operations/*.ts",
+        "src/jswasm/vfs/filesystem/node-core-operations/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
