refactor(vfs): Migrate node-metadata-operations from JavaScript to TypeScript
- Replace node-metadata-operations.mjs with TypeScript implementation
- Reorganize into dedicated directory structure with separate test files
- Add comprehensive test plan documentation for migration validation
- Update TypeScript migration configuration to include new module
- Modify node-actions.mjs to reflect new import paths

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -35,7 +35,8 @@
         "src/jswasm/vfs/filesystem/legacy-helpers/*.ts",
         "src/jswasm/vfs/filesystem/mode-operations/*.ts",
         "src/jswasm/vfs/filesystem/mount-operations/*.ts",
-        "src/jswasm/vfs/filesystem/node-core-operations/*.ts"
+        "src/jswasm/vfs/filesystem/node-core-operations/*.ts",
+        "src/jswasm/vfs/filesystem/node-metadata-operations/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
