refactor(vfs): Migrate path operations from JS to TypeScript
- Convert path-operations.mjs and path-operations.d.ts to path-operations.ts
- Add comprehensive test suite for path operations with full coverage
- Update tsconfig.migration.json to include new path-operations module
- Add test plan documentation for path operations validation
- Update dependent test files to work with new TypeScript structure
- Enhance filesystem.mjs and base-state.ts for better integration

This migration improves type safety, maintainability, and developer experience
while preserving all existing functionality for the VFS path operations.

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -36,7 +36,8 @@
         "src/jswasm/vfs/filesystem/mode-operations/*.ts",
         "src/jswasm/vfs/filesystem/mount-operations/*.ts",
         "src/jswasm/vfs/filesystem/node-core-operations/*.ts",
-        "src/jswasm/vfs/filesystem/node-metadata-operations/*.ts"
+        "src/jswasm/vfs/filesystem/node-metadata-operations/*.ts",
+        "src/jswasm/vfs/filesystem/path-operations/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
