refactor(vfs): Migrate stream operations from JavaScript to TypeScript
- Convert stream-operations.mjs to TypeScript with full type safety
- Move module to dedicated stream-operations/ subdirectory structure
- Add comprehensive test suite with 27 test cases covering all functionality
- Update import path in filesystem.mjs to use compiled JavaScript output
- Remove legacy .mjs and .d.ts files after successful migration
- Add migration documentation and test plan in docs/development/
- Update tsconfig.migration.json for build configuration
- Maintain 100% backward compatibility and API contract

Technical improvements:
- Enhanced type safety with StreamOperationsFS interface
- Comprehensive JSDoc documentation following project standards
- All 399 tests pass, including 27 new stream-operations tests
- Full ESLint and Prettier compliance
- Zero breaking changes for consuming code

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -37,7 +37,8 @@
         "src/jswasm/vfs/filesystem/mount-operations/*.ts",
         "src/jswasm/vfs/filesystem/node-core-operations/*.ts",
         "src/jswasm/vfs/filesystem/node-metadata-operations/*.ts",
-        "src/jswasm/vfs/filesystem/path-operations/*.ts"
+        "src/jswasm/vfs/filesystem/path-operations/*.ts",
+        "src/jswasm/vfs/filesystem/stream-operations/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
