--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -38,6 +38,7 @@
         "src/jswasm/vfs/filesystem/node-core-operations/*.ts",
         "src/jswasm/vfs/filesystem/node-metadata-operations/*.ts",
         "src/jswasm/vfs/filesystem/path-operations/*.ts",
+        "src/jswasm/vfs/filesystem/stream-helpers/*.ts",
         "src/jswasm/vfs/filesystem/stream-operations/*.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
