--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -39,7 +39,9 @@
         "src/jswasm/vfs/filesystem/node-metadata-operations/*.ts",
         "src/jswasm/vfs/filesystem/path-operations/*.ts",
         "src/jswasm/vfs/filesystem/stream-helpers/*.ts",
-        "src/jswasm/vfs/filesystem/stream-operations/*.ts"
+        "src/jswasm/vfs/filesystem/stream-operations/*.ts",
+        "src/jswasm/vfs/opfs/async-proxy/logging/*.ts",
+        "src/types/global.d.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
 }
