--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -41,6 +41,7 @@
         "src/jswasm/vfs/filesystem/stream-helpers/*.ts",
         "src/jswasm/vfs/filesystem/stream-operations/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/logging/*.ts",
+        "src/jswasm/vfs/opfs/async-proxy/environment/*.ts",
         "src/types/global.d.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
