refactor(opfs): Migrate serialization-buffer from JavaScript to TypeScript
- Convert serialization-buffer.mjs and .d.ts to TypeScript implementation
- Move to new directory structure: serialization-buffer/serialization-buffer.ts
- Add comprehensive unit tests for serialization/deserialization functionality
- Update worker import path to load compiled JS output
- Fix TextDecoder compatibility with SharedArrayBuffer in browser environment
- Add migration documentation and test plan
- Update tsconfig.migration.json to include new serialization-buffer path
- Preserve public API and worker semantics via globalThis attachment
- Remove legacy JS files after successful migration

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -42,6 +42,7 @@
         "src/jswasm/vfs/filesystem/stream-operations/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/logging/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/environment/*.ts",
+        "src/jswasm/vfs/opfs/async-proxy/serialization-buffer/*.ts",
         "src/types/global.d.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
