refactor(opfs): Migrate async proxy state from JavaScript to TypeScript
- Convert state.mjs to TypeScript implementation with proper type safety
- Add comprehensive test suite for the new TypeScript state module
- Create detailed test plans and migration documentation
- Update async-proxy-worker to work with new TypeScript state
- Reorganize state module structure with separate types file
- Add serialization buffer test updates for TypeScript compatibility
- Update sync-handle-error module for new state integration
- Configure TypeScript migration settings
- Add development documentation for async proxy components

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -43,6 +43,8 @@
         "src/jswasm/vfs/opfs/async-proxy/logging/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/environment/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/serialization-buffer/*.ts",
+        "src/jswasm/vfs/opfs/async-proxy/state/*.ts",
+        "src/jswasm/vfs/opfs/async-proxy/state/types.d.ts",
         "src/types/global.d.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
