refactor(opfs): Migrate sync-handle-error from JavaScript to TypeScript
- Convert sync-handle-error.mjs and .d.ts to TypeScript implementation
- Move sync-handle-error module to dedicated directory structure
- Add comprehensive test suite for sync-handle-error functionality
- Update async-proxy index.mjs to import from new location
- Add sync-handle-error to TypeScript migration configuration
- Create migration plan documentation for the refactoring process

--- a/tsconfig.migration.json
+++ b/tsconfig.migration.json
@@ -45,6 +45,7 @@
         "src/jswasm/vfs/opfs/async-proxy/serialization-buffer/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/state/*.ts",
         "src/jswasm/vfs/opfs/async-proxy/state/types.d.ts",
+        "src/jswasm/vfs/opfs/async-proxy/sync-handle-error/*.ts",
         "src/types/global.d.ts"
     ],
     "exclude": ["src/**/*.test.ts"]
