--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "scripts": {
         "build": "vite build --watch",
         "test": "pnpm --filter @wuchuheng/web-sqlite-tests exec vite --port 50001 --host 0.0.0.0",
+        "build:opfs:async-proxy": "vite build -c vite.config.opfs-async-proxy.ts",
         "test:unit": "vitest run",
         "test:unit:watch": "vitest",
         "typecheck:watch": "tsc --watch -p tsconfig.json",
