test(e2e): set up e2e test env

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,6 +5,7 @@
         "scripts",
         "vite.config.ts",
         "vitest.config.ts",
+        "vitest.debug.config.ts",
         "eslint.config.mts"
     ]
 }
