--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "scripts": {
         "build": "vite build --watch",
         "test": "pnpm --filter @wuchuheng/web-sqlite-tests exec vite --port 50001 --host 0.0.0.0",
+        "test:browser": "vitest run --config vitest.debug.config.ts",
         "build:opfs:async-proxy": "vite build -c vite.config.opfs-async-proxy.ts",
         "test:unit": "vitest run",
         "test:unit:watch": "vitest",
@@ -42,11 +43,14 @@
     "devDependencies": {
         "@eslint/js": "^9.37.0",
         "@types/node": "^24.7.1",
+        "@vitest/browser": "^4.0.14",
+        "@vitest/browser-playwright": "^4.0.14",
         "@wuchuheng/helper": "^1.3.0",
         "commander": "^14.0.1",
         "eslint": "^9.37.0",
         "globals": "^16.4.0",
         "jiti": "^2.6.1",
+        "playwright": "^1.57.0",
         "prettier": "3.6.2",
         "tsx": "^4.20.6",
         "typescript": "~5.9.3",
@@ -54,6 +58,6 @@
         "vite": "^7.1.10",
         "vite-plugin-dts": "^4.5.4",
         "vitepress": "^1.5.0",
-        "vitest": "^4.0.9"
+        "vitest": "^4.0.14"
     }
 }
