test(e2e): Migrate browser tests to e2e testing framework
- Rename tests/browser/* to tests/e2e/* with .e2e.test.ts suffix
- Remove legacy custom test runner infrastructure (tests/src/)
- Delete standalone test package configuration (tests/package.json, tests/vite.config.ts)
- Remove old test UI assets (tests/index.html, tests/css/, tests/styles.css)
- Clean up redundant test files (opfs-proxy-client.test.ts, tests/README.md)
- Update root package.json and pnpm-lock.yaml for consolidated test setup
- Add package-lock.json for npm compatibility
- Update tsconfig.eslint.json to reflect new test structure
- Modify vitest.config.ts and vitest.e2e.config.ts for unified test execution

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -6,6 +6,7 @@
         "vite.config.ts",
         "vitest.config.ts",
         "vitest.debug.config.ts",
-        "eslint.config.mts"
+        "eslint.config.mts",
+        "vitest.e2e.config.ts"
     ]
 }
