--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     },
     "scripts": {
         "build": "vite build --watch",
-        "test": "vitest run --config tests/vitest.config.ts",
+        "test": "vitest run --config vitest.config.ts",
+        "test:e2e": "vitest run --config vitest.e2e.config.ts",
         "test:ui": "vitest --ui --config tests/vitest.config.ts",
         "test:legacy": "pnpm --filter @wuchuheng/web-sqlite-tests exec vite --port 50001 --host 0.0.0.0",
         "test:browser": "vitest run --config vitest.debug.config.ts",
@@ -46,7 +47,7 @@
         "@eslint/js": "^9.37.0",
         "@types/node": "^24.7.1",
         "@vitest/browser": "^4.0.14",
-        "@vitest/browser-playwright": "^4.0.14",
+        "@vitest/browser-playwright": "^4.0.15",
         "@vitest/ui": "^4.0.14",
         "@wuchuheng/helper": "^1.3.0",
         "commander": "^14.0.1",
